[package]
name = "proxus"
version = "0.1.0"
edition = "2018"
authors = ["Eduard Kargin theedison4@gmail.com"]

[dependencies]
hyper = { version = "0.14.13", features = ["http1", "server", "tcp"] }
tokio = { version = "1.12.0", features = ["net", "macros", "rt-multi-thread"] }
futures = { version = "0.3.17" }
log = "0.4.14"
env_logger = "0.9.0"
redis = { version = "0.21.1", features = ["tokio-comp"] }
futures-util = "0.3.16"
dotenv = "0.15.0"
tokio-stream = "0.1.7"
hyper-tungstenite = "0.4.0"
tokio-tungstenite = "0.15.0"
assert2 = "0.3.4"
hyper-proxy = "0.9.1"